--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
 	<canvas id="pong" width="700" height="400"></canvas>
 
-	<script type="text/javascript" href="/js/main.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 
 </html>
