Adds proper start and game over pages to game.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,12 @@
 <body>
 
 	<canvas id="pong" width="700" height="400"></canvas>
+	<div id="startPage">
+		<span class="text">Start</span>
+	</div>
+	<div id="gameOver">
+		<span class="text">Game Over!</span>
+	</div>
 
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
