--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pong</title>
+	<!-- build:css main.min.css -->
 	<link rel="stylesheet" href="/css/main.css" media="screen" title="no title" charset="utf-8">
+	<!-- endbuild -->
 </head>
 
 <body>
@@ -17,7 +19,9 @@
 		<span class="text">Game Over!</span>
 	</div>
 
+	<!-- build:js main.min.js -->
 	<script type="text/javascript" src="/js/main.js"></script>
+	<!-- endbuild -->
 </body>
 
 </html>
